FIX - change overflow main-content

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ html {
 }
 
 .main-content {
-    overflow: scroll;
+    overflow-y: scroll;
     flex-grow: 1;
     background-color: #000;
     color: #FFF;
@@ -40,7 +40,6 @@ html {
 
 .toolbar {
     background-color: #222;
-    min-height: 100px;
 }
 
 .grid {
@@ -88,7 +87,4 @@ html {
     line-height: 1.125rem;
     padding: 0 0.25rem;
     border-radius: 0.25rem;
-
-
-
 }
